# domus-dweller

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  SKILLS.md  pyproject.toml
.github/workflows/: README.md  ci.yml  daily-olx-bigquery.yml  daily-olx-motherduck.yml
apps/web/: README.md
data/: README.md
docs/: agent-todos.md  architecture.md  bigquery-dbt.md  bigquery-ingestion.md  collection-policy.md  data-sources.md  decisions.md  motherduck-ingestion.md  open-questions.md  phase-1-ingestion.md  roadmap.md  schema-v1.md  testing.md
ingestion/: README.md
ingestion/src/domus_dweller/: __init__.py  merge_pages.py  parse.py
ingestion/src/domus_dweller/sinks/: __init__.py  bigquery.py  bigquery_bootstrap.py  motherduck.py  motherduck_bootstrap.py  olx_files_to_bigquery.py  olx_files_to_motherduck.py
ingestion/src/domus_dweller/sources/: __init__.py
ingestion/tests/: __init__.py
ingestion/tests/fixtures/olx/: search_results.html
ingestion/tests/fixtures/otodom/: search_results.html
ingestion/tests/functional/: test_bigquery_bootstrap.py  test_bigquery_sink.py  test_merge_pages_cli.py  test_motherduck_bootstrap.py  test_motherduck_sink_integration.py  test_olx_detail_enrichment.py  test_olx_end_to_end_pipeline.py  test_olx_files_to_bigquery_cli.py  test_olx_files_to_motherduck_cli.py  test_olx_ingest_bigquery.py  test_olx_ingest_motherduck.py  test_olx_parser_contract.py  test_olx_parser_quality.py  test_otodom_olx_parser_contract.py  test_otodom_olx_parser_quality.py  test_parse_cli.py
notebooks/: README.md
sql/: README.md
(+7 files in other folders)
