[project]
name = "domus-dweller"
version = "0.1.0"
description = "Housing analytics pipeline for Krakow and nearby suburbs."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "h3>=4.2.2",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.0",
    "selectolax>=0.3.29",
    "tenacity>=9.0.0",
    "duckdb>=1.2.0",
    "pyarrow>=19.0.0",
    "db-dtypes>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.5",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.5",
    "db-dtypes>= 1.0"
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion/src/domus_dweller"]

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "ingestion/src/domus_dweller",
    "docs",
    "sql",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["ingestion/tests"]
pythonpath = ["ingestion/src"]
